--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,9 @@ Debug/
 Release/
 x64/
 x86/
+ImGui/
+glew/
+glfw/
 
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
